XMLtoCSV/objects/unpackaged/objects/PCYC_Inactive_Affiliation__c.object
<CustomObject>
    <description>Staging Table for Inactive and Not Valid Affiliations</description>
    <fields>
        <fullName>PCYC_Child_Account__c</fullName>
        <description>Child Account Id</description>
        <label>Child Account Id</label>
        <length>18</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PCYC_External_ID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>Enforce the uniqueness of account hierarchy (parent, child) pair.</description>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>40</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>PCYC_Last_Processed_Date__c</fullName>
        <description>Last Processed Date Time</description>
        <label>Last Processed Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>PCYC_Network_External_Id__c</fullName>
        <externalId>true</externalId>
        <label>Network External Id</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>PCYC_Parent_Account__c</fullName>
        <description>Parent Account Id</description>
        <label>Parent Account Id</label>
        <length>18</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PCYC_Status__c</fullName>
        <defaultValue>&apos;Staged&apos;</defaultValue>
        <label>Status</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>Staging Inactive Affiliation</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>PCYC_Child_Account__c</columns>
        <columns>PCYC_Parent_Account__c</columns>
        <columns>PCYC_Network_External_Id__c</columns>
        <columns>PCYC_External_ID__c</columns>
        <columns>PCYC_Last_Processed_Date__c</columns>
        <columns>PCYC_Status__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>IA-{0}</displayFormat>
        <label>Inactive Affiliation #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Staging Inactive Affiliations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>